feature(BJS2-40528): big refactor after review